--- a/styles-contact.css
+++ b/styles-contact.css
@@ -125,11 +125,11 @@ nav{
     font-family: omnes,serif;
     font-size: 1.2em;
     width: 400px;
-    margin: 0 auto;
-    border: rounded white;
-    border-width: 3px 0;
+    margin: auto;
+    border: white;
+    border-width: 1.5px 0;
     text-align: center;
-    margin-top: 2em;
+    margin-top: 1.5em;
     padding-bottom: 10em
         
 }
@@ -142,7 +142,7 @@ nav li{
 
 nav a{
     display:inline-block;
-    padding:10px;
+    padding:20px;
 }
     
 a{
@@ -152,7 +152,7 @@ a{
 }
 
 a:hover{
-    color:white;
+    color:rebeccapurple;
     background: rgba(249, 235, 235, 0.1); /*this uses opacity of 75% for the background color*/
     
     
